fix: Better align for add button

--- a/src/components/notes/List/list.styl
+++ b/src/components/notes/List/list.styl
@@ -9,8 +9,9 @@ $PADDING_TABLE_FIRST_COLUMN=1rem
     display: flex
     a
         color: var(--dodgerBlue)
-.titlePadding
+.appHeader
     padding-left $PADDING_TABLE_FIRST_COLUMN
+    padding-right $PADDING_TABLE_FIRST_COLUMN
 .tableSpecialRow
     flex 1
     height 100%
